--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>praktikum-java-qa-sprint-4</artifactId>
+    <artifactId>sprint-4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
